[metadata]
name = mlogevo
version = 0.0.5
author = UMRnInside
author_email = 30196401+UMRnInside@users.noreply.github.com
description = Compile C code to Mindustry logic
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UMRnInside/MlogEvo
project_urls = 
    Bug Tracker = https://github.com/UMRnInside/MlogEvo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.9
install_requires = 
    pycparserext_gnuc>=2022.10
    pycparser>=2.18

[options.packages.find]
where = .
exclude = 
    tests
    docs
    examples
    arch_mlog_tests

[options.entry_points]
console_scripts =
    mlogevo = mlogevo.__main__:main
